<resources>
    <string name="app_name">FireSci</string>
    <!-- Strings used for fragments for navigation -->

    /*--------nav_drawable-------*/
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>

    <string name="no_description" />
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_question_mark">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="firesci_pin">FireSci PIN</string>
    <string name="pin_is_not_recognized">Pin is not recognized.</string>
    <string name="txt_continue">Continue</string>
    <string name="registration_description">Enter the FireSci pin. Email FireSci to obtain a pin if you don’t have one.</string>
    <string name="what_is_your_name">What is your Name?</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="firesci_pin_or_e_mail">FireSci Pin or E-mail</string>
    <string name="firesci_access_code_or_e_mail">FireSci Access Code or E-mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="which_country_do_you_live_in">Which Country Do You Live In?</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="company_details">Company Details</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="state_province">State/Province</string>
    <string name="enter_your_state_province">Enter Your State/Province</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_your_zip_code">Enter Your Zip Code</string>
    <string name="all_fields_required">*All Fields Required</string>
    <string name="by_continuing_you_agree_to_firesci_terms_of_service">By Continuing you agree to FireSci Terms of Service</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="show_password">Show Password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="password_error_detail">Password must contain: a minimum of 1 lowercase letter [a&#8211;z], a minimum of one uppercase letter [A&#8211;Z], minimum of 1 numeric character [0&#8211;9], and a length of 8&#8211;25 characters.</string>
    <string name="phone_number_detail">We will use your phone number to contact you for any potential revisions in installed systems. We will also use your phone number for security purposes if your account gets breached.</string>
    <string name="phone_number">Phone Number</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="e_mails_do_not_match">E-mails do not match.</string>
    <string name="please_enter_a_valid_e_mail_address">Please enter a valid E-mail address.</string>
    <string name="verify_your_e_mail">Verify Your E-mail</string>
    <string name="account_created_check_e_mail">Account created! Please check your e-mail to verify your account.</string>
    <string name="email_sent_in_detail">We sent you an email to the proposed email address. To activate your account, please click on the link in the e-mail and press continue.</string>
    <string name="check_in_spam_folder">If the e-mail was sent to your spam folder, move it to your primary inbox first, then proceed with the steps above.</string>
    <string name="email_sent">Email Sent!</string>
    <string name="click_on_the_link_in_email_and">Click on the link in email and</string>
    <string name="try_again">Try Again!</string>
    <string name="didn_t_get_an_e_mail">Didn\'t get an E-mail?</string>
    <string name="didn_t_receive_our_e_mail_detail">Didn\'t receive our E-mail? This may be due to following reasons.</string>
    <string name="check_your_spam_trash_folder_as_it_may_be_moved">Check your spam/trash folder as it may be moved.</string>
    <string name="your_e_mail_may_have_a_typo">Your E-mail may have a typo. Check to see if you have used your correct E-mail address.</string>
    <string name="try_re_sending_e_mail">Try re-sending E-mail if none of the above seem to be the issue.</string>
    <string name="resend_email">Resend Email</string>
    <string name="use_another_e_mail">Use Another E-mail</string>
    <string name="email_not_sent">Email Not Sent!</string>
    <string name="verifying_your_e_mail">Verifying your E-mail…</string>
    <string name="email_verified_successfully">Email Verified Successfully</string>
    <string name="home">Home</string>
    <string name="system_has_discharged">System Has Discharged.</string>
    <string name="system_needs_inspection">System Needs Inspection.</string>
    <string name="nav_home_page">Home Page</string>
    <string name="nav_new_location">Add New Location</string>
    <string name="nav_view_account">View Account</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_logout">Log Out</string>
    <string name="company_name_asterisk">Company Name *</string>
    <string name="city_asterisk">City *</string>
    <string name="state_province_asterisk">State/Province *</string>
    <string name="country_asterisk">Country *</string>
    <string name="address_asterisk">Address *</string>
    <string name="zip_code_asterisk">Zip Code *</string>
    <string name="location_description_asterisk">Location Description *</string>
    <string name="enter_location_description">Enter Location Description</string>
    <string name="customer_firesci_pin_1">Customer FireSci Pin 1</string>
    <string name="enter_customer_firesci_pin_1">Enter Customer FireSci Pin 1</string>
    <string name="customer_firesci_pin_2">Customer FireSci Pin 2</string>
    <string name="enter_customer_firesci_pin_2">Enter Customer FireSci Pin 2</string>
    <string name="customer_firesci_pin_3">Customer FireSci Pin 3</string>
    <string name="enter_customer_firesci_pin_3">Enter Customer FireSci Pin 3</string>
    <string name="add_location">Add Location</string>
    <string name="account_details">Account Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="account_security">Account Security</string>
    <string name="change_your_password">Change your Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="systems">Systems</string>
    <string name="details">Details</string>
    <string name="system_details">System Details</string>
    <string name="system_type">System Type</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_name">Device Name</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="description">Description</string>
    <string name="edit_system">Edit System</string>
    <string name="device_name_asterisk">Device Name *</string>
    <string name="eg_server_rack">Eg. Server Rack</string>
    <string name="eg_server_room">Eg. Server Room</string>
    <string name="eg_main_building">Eg. Main Building</string>
    <string name="server_room">Server Room</string>
    <string name="building_name">Building Name</string>
    <string name="eg_1st_floor">Eg. 1st Floor</string>
    <string name="product_installed">Product Installed</string>
    <string name="add_a_new_system">Add a New System</string>
    <string name="enter_the_five_digit_serial_number">Enter the five digit Serial number.</string>
    <string name="you_ll_find_your_code_underneath_the_qr_code_onthe_device">You”ll Find Your code Underneath the QR Code Onthe Device</string>
    <string name="serial_number_is_not_recognized">Serial Number is not recognized.</string>
    <string name="choose_your_firesci_device">Choose your FireSci Device</string>
    <string name="add_new_system_detail">Enter the information that corresponds to device. Include as much information as possible to specify device.</string>
    <string name="location_description">Location Description</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password_again">Enter New Password again</string>
    <string name="password_must_contain_a_minimum_of_1_lowercase_letter_a_z_a_minimum_of_one_uppercase_letter_a_z_minimum_of_1_numeric_character_0_9_and_a_length_of_8_25_characters">Password must contain: a minimum of 1 lowercase letter [a-z], a minimum of one uppercase letter [A-Z], minimum of 1 numeric character [0-9], and a length of 8-25 characters.</string>
    <string name="old_password_is_incorrect">Old Password is incorrect.</string>
    <string name="edit_location">Edit Location</string>
    <string name="add_system">Add System</string>
    <string name="help">Help</string>
    <string name="contact_support">Contact Support</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="forgot_password_detail">Enter the email address associated with your account.</string>
    <string name="enter_your_e_mail_address_below">Enter your E-mail address below.</string>
    <string name="verification_code_detail">Enter the verification code we just sent to your email address.</string>
    <string name="text_verify">Verify</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="resend_code">Resend code</string>
    <string name="resend">Resend</string>
    <string name="reset_password_detail">Reset your password by entering a new password.</string>
    <string name="reset_password">Reset password</string>
</resources>