<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Installer.AccountActivityInstaller">

    <View
        android:id="@+id/viewTopBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/account_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTopBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/accountDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/personal_details"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/pinLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountDetailsTextView">

                <TextView
                    android:id="@+id/pinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/firesci_pin"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pinTextViewInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    tools:text="001AA" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pinLinearLayout">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/first_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/nameEditTextAccountInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_first_name"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:paddingHorizontal="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/lastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/last_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/lastNameEditTextAccountInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_last_name"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:paddingHorizontal="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/companyNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/company_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/companyNameEditTextAccountInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/enter_company_name"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:paddingHorizontal="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/emailEditTextAccountInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_your_email"
                    android:imeActionLabel="Next"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:id="@+id/phoneNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/phone_number"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/phoneNumberEditTextAccountInstaller"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_your_phone_number"
                    android:imeActionLabel="Done"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number|phone"
                    android:paddingHorizontal="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor" />
            </LinearLayout>

            <TextView
                android:id="@+id/all_fields_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/all_fields_required"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout5" />

            <TextView
                android:id="@+id/accountSecurityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/account_security"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_fields_required" />

            <TextView
                android:id="@+id/changeYourPasswordTextViewAccountInstaller"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountSecurityTextView" />

            <TextView
                android:id="@+id/logoutTextViewAccountInstaller"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/poppins_medium"
                android:padding="15dp"
                android:text="@string/nav_logout"
                android:textColor="#BF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeYourPasswordTextViewAccountInstaller" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveChangesButtonAccountInstaller"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoutTextViewAccountInstaller" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressBarAccountDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/progress_bar_back"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

